<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.employeeLogin.EmployeeLoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp">


        <EditText
            android:id="@+id/etEmployeeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/bg_auth_text_field"
            android:layout_marginTop="30dp"
            android:autofillHints="emailAddress"/>

        <EditText
            android:id="@+id/etEmployeePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/bg_auth_text_field"
            android:layout_marginTop="10dp"
            android:autofillHints="password"/>

        <Button
            android:id="@+id/btnEmployeeSignIn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/signin"
            android:layout_marginTop="15dp"
            app:backgroundTint="@null"
            android:background="@drawable/bg_auth_button"/>


    </LinearLayout>
    </ScrollView>



</FrameLayout>